--- a/video.html
+++ b/video.html
@@ -7,6 +7,10 @@
 </video>
 
 <script src="tracker.js"></script>
+<script>
+	const video = document.getElementById("videoPlayer");
+	const tracker = new VideoTracker(video);
+</script>
 
 </body> 
 </html>
